# papershift

./: .env.example  .gitignore  README.md  build_and_publish.py  main.py  pyproject.toml  requirements.txt
Test/: integration_test_pdf_to_markdown.py  run_integration_tests.py  run_pdf_tests.py  test_pdf_converter.py
examples/: advanced_usage.py  example_usage.py  pdf_to_markdown_example.py  simple_usage.py
src/: __init__.py  image_to_markdown.py  page_parser.py  pdf_converter.py  pdf_to_markdown.py
tests/: integration_test_image_to_markdown.py  run_image_sample.py  run_image_tests.py  run_pdf_tests.py  test_image_to_markdown.py  test_page_parser.py  test_pdf_to_markdown.py
tests/data/images/: test_image.py
tests/output/1-pages/: combined.md
tests/output/10-pages/: combined.md  page_001.md  page_002.md  page_003.md  page_004.md  page_005.md  page_006.md  page_007.md  page_008.md  page_009.md  page_010.md
