[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "papershift"
version = "0.1.2"
description = "Convert PDF documents and images to Markdown format with AI assistance"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "PDF to Markdown Team"}
]
keywords = ["pdf", "markdown", "conversion", "ai", "image"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "PyMuPDF>=1.23.7",
    "litellm>=1.0.0",
    "openrouter>=0.2.0",
    "python-dotenv>=0.19.0",
    "Pillow>=10.0.0",
]

[project.urls]
"Homepage" = "https://github.com/satish860/papershift"
"Bug Tracker" = "https://github.com/satish860/papershift/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
]

[tool.setuptools]
package-dir = {"papershift" = "src"}
packages = ["papershift"]
